--- a/style.css
+++ b/style.css
@@ -8,24 +8,62 @@
 
 @font-face {
     font-family:Titulos;
-    src: url(Fontes/blacky/Blacky.ttf);
+    src: url(Fontes/Super\ Normal.ttf);
+}
+
+@font-face {
+    font-family: Texto;
+    src: url(Fontes/Vogue.ttf);
 }
 
 body{
-    background-image: url(img/teste.jpg);
-   background-size: 100%;
+    background-color: grey;
+}
+
+header{
+    display: grid;
+    grid-template-columns:10% 80% 10%;
+    height: 12%;
+    position: fixed;
+    z-index: 2;
+    background-color: black;
+}
+
+.linguagens{
+    padding-left: 30%;
+}
+
+.linguagens > img{
+    width: 7%;
+    height: 60%;
+    padding-left: 2%;
+    padding-top: 1%;
+
+}
+
+.redes{
+    width: 40%;
+    height: 60%;
+    padding-top: 7%;
+}
+
+.redes > a{
+    width: 50%;
+    height: 60%;
 }
 
 h1{
     color: white;
     font-family:Titulos;
-    font-size: 200%;
+    font-size: 300%;
     padding: 5%;
 }
 
 p{
+    font-size: 100%;
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
-    padding: 5%;
+    padding: 4%;
 }
 
 .Corpo{
@@ -37,7 +75,7 @@ p{
 .Principal{
     height: 20%;
     width: 70%;
-    margin: 30%;
+    margin: 20%;
  
     
 }
@@ -56,4 +94,43 @@ p{
     height: 60%;
     border-radius: 100%;
     margin-top: 20%;
+    transition: 0.5s;
 }
+
+.Menu {
+    margin: 0;
+    padding: 0;
+    width: 0%;
+    background-color: #f1f1f1;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+    z-index: 3;
+    transition: 0.5s;
+  }
+  
+  .Menu a {
+    width: 100%;
+    height: 10%;
+    display: block;
+    color: black;
+    padding: 16px;
+    text-decoration: none;
+  }
+   
+  
+  
+
+  .abrir{
+    font-family:Titulos;
+    height: 2%;
+    cursor: pointer;
+    color: white;
+    margin-top: 10%;
+    margin-left: 20%;
+  
+  }
+  
+
+  
+  
