--- a/style.css
+++ b/style.css
@@ -18,39 +18,10 @@
 
 body{
     background-color: grey;
-}
-
-header{
     display: grid;
-    grid-template-columns:10% 80% 10%;
-    height: 12%;
-    position: fixed;
-    z-index: 2;
-    background-color: black;
+    grid-template-columns: 30% 70%;
 }
 
-.linguagens{
-    padding-left: 30%;
-}
-
-.linguagens > img{
-    width: 7%;
-    height: 60%;
-    padding-left: 2%;
-    padding-top: 1%;
-
-}
-
-.redes{
-    width: 40%;
-    height: 60%;
-    padding-top: 7%;
-}
-
-.redes > a{
-    width: 50%;
-    height: 60%;
-}
 
 h1{
     color: white;
@@ -59,6 +30,17 @@ h1{
     padding: 5%;
 }
 
+h2{
+    width: 65%;
+    height: 20%;
+    color: white;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: 200%;
+    padding-left: 17%;
+    padding-top: 17%;
+}
+
+
 p{
     font-size: 100%;
     font-family: Arial, Helvetica, sans-serif;
@@ -66,9 +48,11 @@ p{
     padding: 4%;
 }
 
-.Corpo{
+.Barra_Lateral{
+    position: static;
     display: grid;
-    grid-template-columns: 60% 40%;
+    grid-template-rows: 30% 70%;
+    background-color: black;
 
 }
 
@@ -81,56 +65,36 @@ p{
 }
 
 .Foto{
-    height: 80%;
-    width: 80%;
-    position: relative;
     z-index: 1;
-    margin: 10%;
-   
+
 }
 
 .Foto>img{
-    width: 70%;
-    height: 60%;
-    border-radius: 100%;
-    margin-top: 20%;
+    width: 40%;
+    height: 80%;
+    border-radius: 100%;    
+    margin-top: 10%;
+    margin-left: 25%;
     transition: 0.5s;
 }
+.Menu{
+    display: flex;
+    flex-direction: column;
+}
 
-.Menu {
-    margin: 0;
-    padding: 0;
-    width: 0%;
-    background-color: #f1f1f1;
-    position: fixed;
-    height: 100%;
-    overflow: auto;
-    z-index: 3;
-    transition: 0.5s;
-  }
-  
-  .Menu a {
-    width: 100%;
-    height: 10%;
-    display: block;
-    color: black;
-    padding: 16px;
-    text-decoration: none;
-  }
-   
-  
-  
-
-  .abrir{
-    font-family:Titulos;
-    height: 2%;
-    cursor: pointer;
+.Menu a {
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    list-style: none;
     color: white;
-    margin-top: 10%;
-    margin-left: 20%;
-  
-  }
-  
+    text-decoration: none;
+    height: 5%;
+    width: 94%;
+    padding:2%;
+    transition: 0.3s;
+    margin-left: 2%;
+}
 
-  
+.Menu a:hover{
+    background-color: green;
+}
   
