--- a/style.css
+++ b/style.css
@@ -1,37 +1,32 @@
 *{
     margin:0%;
     padding:0%;
-    z-index: 0;
+    z-index: 1;
     width:100%;
     height:100%;
 }
 
-@font-face {
-    font-family:Titulos;
-    src: url(Fontes/Super\ Normal.ttf);
-}
-
-@font-face {
-    font-family: Texto;
-    src: url(Fontes/Vogue.ttf);
-}
-
 body{
-    background-color: grey;
+    background-color:black;
     display: grid;
     grid-template-columns: 30% 70%;
+    
+   
 }
 
+.Engana{
+    width: 30%;
+}
 
 h1{
     color: white;
-    font-family:Titulos;
+    font-family:Arial, Helvetica, sans-serif;
     font-size: 300%;
     padding: 5%;
 }
 
 h2{
-    width: 65%;
+    width: 75%;
     height: 20%;
     color: white;
     font-family:Georgia, 'Times New Roman', Times, serif;
@@ -48,18 +43,25 @@ p{
     padding: 4%;
 }
 
-.Barra_Lateral{
-    position: static;
+.Corpo{
+    width: 100%;
+    display: grid;
+    grid-template-rows: 100% 100%;
+}
+
+header{
+    width: 30%;
     display: grid;
     grid-template-rows: 30% 70%;
-    background-color: black;
+    background-color: #212121;
+   position:fixed;
 
 }
 
-.Principal{
+.Apresentacao{
     height: 20%;
-    width: 70%;
-    margin: 20%;
+    width: 75%;
+    margin: 16%;
  
     
 }
@@ -84,6 +86,7 @@ p{
 
 .Menu a {
     font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: larger;
     list-style: none;
     color: white;
     text-decoration: none;
@@ -95,6 +98,24 @@ p{
 }
 
 .Menu a:hover{
-    background-color: green;
+    background-color: #006494;
 }
-  
+
+.Sobre_Mim{
+    align-items: center;
+    align-self: center;
+}
+
+.Enfeite{
+    color: #006494;
+}
+
+.Info{
+    height: 10%;
+    width: 50%;
+}
+
+.Sobre_Mim{
+    display: grid;
+    grid-template-rows:20% 50% 30% ;
+}
