--- a/style.css
+++ b/style.css
@@ -10,19 +10,19 @@ body{
     background-color:black;
     display: grid;
     grid-template-columns: 30% 70%;
-    
-   
 }
 
 .Engana{
     width: 30%;
+    height: 200%;
 }
 
 h1{
     color: white;
     font-family:Arial, Helvetica, sans-serif;
     font-size: 300%;
-    padding: 5%;
+    height: 50%;
+    padding: 0%;
 }
 
 h2{
@@ -40,13 +40,13 @@ p{
     font-size: 100%;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    padding: 4%;
+    padding: 0%;
 }
 
 .Corpo{
-    width: 100%;
+    height: 200%;
     display: grid;
-    grid-template-rows: 100% 100%;
+    grid-template-rows: 50% 50% 50%;
 }
 
 header{
@@ -58,12 +58,17 @@ header{
 
 }
 
+.Introducao{
+    height: 70%;
+}
+
 .Apresentacao{
-    height: 20%;
+    display: grid;
+    grid-template-rows: 50% 50%;
+    height: 40%;
     width: 75%;
-    margin: 16%;
- 
-    
+    margin: 25%;
+
 }
 
 .Foto{
@@ -102,8 +107,9 @@ header{
 }
 
 .Sobre_Mim{
-    align-items: center;
-    align-self: center;
+    height: 80%;
+    display: grid;
+    grid-template-rows:20% 80%  ;
 }
 
 .Enfeite{
@@ -111,11 +117,45 @@ header{
 }
 
 .Info{
-    height: 10%;
+    height: 50%;
     width: 50%;
+    margin-left: 30%;
+    border-bottom: 10px white;
+    z-index: 2;
 }
 
-.Sobre_Mim{
+.Info > h1{
+    height: 50%;
+    padding: 0;
+}
+
+.Detalhes{
+    height: 50%;
+    width: 80%;
     display: grid;
-    grid-template-rows:20% 50% 30% ;
+    grid-template-columns: 40% 50%;
+    padding: 5%;
+    align-items: baseline;
+}
+
+.Detalhes > .Enfeite{
+    font-size: 120%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: oblique;
+}
+
+.Detalhes > p{
+    height: 10%;
+    width: 80%;
+    padding: 0%;
+}
+
+.Detalhes > span{
+    height: 80%;
+    width: 80%;
+}
+
+.Conhecimentos{
+    display: grid;
+    grid-template-rows:10% 60% ;
 }
