--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ h2{
     color: white;
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-size: 200%;
-    padding-left: 17%;
-    padding-top: 17%;
+    padding-left: 10%;
+    padding-top: 10%;
 }
 
 
@@ -46,7 +46,7 @@ p{
 .Corpo{
     height: 200%;
     display: grid;
-    grid-template-rows: 50% 50% 50%;
+    grid-template-rows: 50% 50% 50% 50%;
 }
 
 header{
@@ -58,16 +58,36 @@ header{
 
 }
 
+
+
+.Link > img{
+    height: 1100%;
+    width: 120%;
+
+
+
+}
+
+.Contatos{
+    display: grid;
+    grid-template-columns: 25% 25% 25%;
+    height: 10%;
+    width: 90%;
+    margin-top: 30%;
+    margin-left: 10%;
+}
+
 .Introducao{
-    height: 70%;
+    height: 60%;
 }
 
 .Apresentacao{
     display: grid;
-    grid-template-rows: 50% 50%;
+    grid-template-rows: 35% 30%;
     height: 40%;
     width: 75%;
-    margin: 25%;
+    margin-top: 25%;
+    margin-left: 10%;
 
 }
 
@@ -109,7 +129,7 @@ header{
 .Sobre_Mim{
     height: 80%;
     display: grid;
-    grid-template-rows:20% 80%  ;
+    grid-template-rows:15% 80%  ;
 }
 
 .Enfeite{
@@ -130,7 +150,7 @@ header{
 }
 
 .Detalhes{
-    height: 50%;
+    height: 35%;
     width: 80%;
     display: grid;
     grid-template-columns: 40% 50%;
@@ -151,11 +171,44 @@ header{
 }
 
 .Detalhes > span{
-    height: 80%;
+    height: 70%;
     width: 80%;
 }
 
 .Conhecimentos{
+    height: 60%;
     display: grid;
-    grid-template-rows:10% 60% ;
+    grid-template-rows:10% 40% ;
+}
+
+.Certificados{
+    height: 30%;
+    
+}
+
+.Painel{
+    display: grid;
+    grid-template-columns: 50% 50% ;
+    grid-template-rows: 50% 50%;
+    column-gap: 5%;
+    row-gap: 5%;
+    margin-left: 10%;
+    width: 80%;
+    height: 100%;
+    
+  
+}
+
+.Painel > a{
+    background-color: #212121;
+    height: 100%;
+
+}
+
+.Painel > a > img{
+    height: 80%;
+    width: 70%;
+    margin: 8%;
+    margin-left: 15%;
+
 }
