--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ header{
     display: grid;
     grid-template-rows: 30% 70%;
     background-color: #212121;
-   position:fixed;
+    position:fixed;
 
 }
 
@@ -83,7 +83,7 @@ header{
 
 .Apresentacao{
     display: grid;
-    grid-template-rows: 35% 30%;
+    grid-template-rows: 35% 40%;
     height: 40%;
     width: 75%;
     margin-top: 25%;
@@ -93,6 +93,7 @@ header{
 
 .Foto{
     z-index: 1;
+  
 
 }
 
@@ -103,10 +104,14 @@ header{
     margin-top: 10%;
     margin-left: 25%;
     transition: 0.5s;
+    border: 10px#006494 solid;
 }
 .Menu{
     display: flex;
-    flex-direction: column;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
 }
 
 .Menu a {
@@ -116,10 +121,9 @@ header{
     color: white;
     text-decoration: none;
     height: 5%;
-    width: 94%;
+    width: 70%;
     padding:2%;
     transition: 0.3s;
-    margin-left: 2%;
 }
 
 .Menu a:hover{
@@ -150,13 +154,18 @@ header{
 }
 
 .Detalhes{
+    background-color: #212121;
     height: 35%;
     width: 80%;
     display: grid;
     grid-template-columns: 40% 50%;
     padding: 5%;
     align-items: baseline;
+    margin-left: 5%;
+    border: 2px solid white;
+    border-radius: 10%;
 }
+
 
 .Detalhes > .Enfeite{
     font-size: 120%;
@@ -166,7 +175,7 @@ header{
 
 .Detalhes > p{
     height: 10%;
-    width: 80%;
+    width: 100%;
     padding: 0%;
 }
 
@@ -179,6 +188,20 @@ header{
     height: 60%;
     display: grid;
     grid-template-rows:10% 40% ;
+}
+.Niveis{
+    background-color: #212121;
+    height: 70%;
+    width: 80%;
+    display: grid;
+    grid-template-columns: 40% 50%;
+    column-gap: 5%;
+    row-gap: 5%;
+    padding: 5%;
+    align-items: baseline;
+    margin-left: 5%;
+    border: 2px solid white;
+    border-radius: 10%;
 }
 
 .Certificados{
@@ -199,10 +222,17 @@ header{
   
 }
 
-.Painel > a{
+#Doc{
     background-color: #212121;
     height: 100%;
+    border-radius: 10%;
 
+}
+#Doc:hover{
+   background-color: black;
+   transition: 0.5s;
+   border:2px solid #006494;
+  
 }
 
 .Painel > a > img{
