--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ p{
     font-size: 100%;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    padding: 0%;
+    padding: 2%;
 }
 
 .Corpo{
@@ -108,15 +108,15 @@ header{
 }
 .Menu{
     display: flex;
-    display: flex;
     flex-direction: column; 
     justify-content: center; 
     align-items: center; 
 }
 
+
 .Menu a {
     font-family:Georgia, 'Times New Roman', Times, serif;
-    font-size: larger;
+    font-size: large;
     list-style: none;
     color: white;
     text-decoration: none;
